tests/FSharp.Compiler.ComponentTests/Conformance/TypeForwarding/NegativeCases/Class_NG_MethodParam.fs
let nc = new NormalClass()
let mp = new N_002.MethodParameter()

mp.Method(nc)
let rv02 = nc.getValue()

exit rv02
